--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,17 @@
   <name>zebra-common</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+  	<dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20140107</version>
+		</dependency>
+   <dependency>
+	<groupId>commons-io</groupId>
+	<artifactId>commons-io</artifactId>
+	<version>2.4</version>
+</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -15,4 +26,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+   <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+      </plugins>
+      </build>
 </project>
